feat: implement base service and update user management functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       ],
       "sampleLibrary/sample-library/*": [
         "libs/sample-library/src/*"
+      ],
+      "@task-management/*": [
+        "apps/task-management/src/*"
       ]
     }
   }
