feat: test migration

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/day-one/test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm": "typeorm-ts-node-commonjs -d ./apps/task-management/src/data-source",
     "typeorm:migration": "typeorm-ts-node-commonjs migration:run -- -d ./apps/task-management/src/data-source.ts"
   },
   "dependencies": {
