feat: impl login logout

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/day-one/test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs -d ./apps/task-management/src/data-source",
-    "typeorm:migration": "typeorm-ts-node-commonjs migration:run -- -d ./apps/task-management/src/data-source.ts"
+    "typeorm": "NODE_OPTIONS='-r dotenv/config -r tsconfig-paths/register' typeorm-ts-node-commonjs -d ./apps/task-management/src/data-source",
+    "typeorm:migration": "typeorm migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -34,6 +34,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dayjs": "^1.11.18",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
