--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
-    "start:debug:task-management": "nest start task-management --debug --watch --env-file apps/task-management/.development.env",
+    "start:debug:task-management": "nest start task-management --debug --watch",
     "start:prod": "node dist/apps/day-one/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
