--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/day-one/test/jest-e2e.json",
-    "typeorm": "NODE_OPTIONS='-r dotenv/config -r tsconfig-paths/register' typeorm-ts-node-commonjs -d ./apps/task-management/src/data-source",
-    "typeorm:migration": "typeorm migration:run"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm:migration": "NODE_OPTIONS='-r dotenv/config -r tsconfig-paths/register' typeorm-ts-node-commonjs -d ./apps/task-management/src/data-source migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
