--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev:day-one": "nest build day-one --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:debug:task-management": "nest start task-management --debug --watch",
+    "start:debug:day-one": "nest start day-one --debug --watch",
     "start:prod": "node dist/apps/day-one/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -36,6 +38,7 @@
     "class-validator": "^0.14.2",
     "dayjs": "^1.11.18",
     "pg": "^8.16.3",
+    "rabbitmq-stream-js-client": "^0.6.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
@@ -92,6 +95,7 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
+      "^foundation/queue(|/.*)$": "<rootDir>/libs/queue/src/$1",
       "^sampleLibrary/sample-library(|/.*)$": "<rootDir>/libs/sample-library/src/$1"
     }
   }
