refactor: remove sub app day-one

--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
   "license": "UNLICENSED",
   "scripts": {
     "build:task-management": "nest build task-management",
-    "build:day-one": "nest build day-one",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:dev:day-one": "nest build day-one --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:debug:task-management": "nest start task-management --debug --watch",
-    "start:debug:day-one": "nest start day-one --debug --watch",
-    "start:prod": "node dist/apps/day-one/main",
+    "start:prod": "node dist/apps/task-management/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/day-one/test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
     "typeorm:migration": "NODE_OPTIONS='-r dotenv/config -r tsconfig-paths/register' typeorm-ts-node-commonjs -d ./apps/task-management/src/data-source migration:run"
   },
