--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:debug:task-management": "nest start task-management --debug --watch",
+    "start:debug:notification": "nest start notification --debug --watch",
     "start:prod": "node dist/apps/task-management/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
